[package]
name = "validator-firewall"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
clap = { version = "4.1", features = ["derive"] }
validator-firewall-common = { path = "../validator-firewall-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
solana-rpc-client = "1.18.12"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9" }
cidr = { version = "0.2", features = ["serde"]}
rangemap = "1.5.1"

[[bin]]
name = "validator-firewall"
path = "src/main.rs"
